apps/staging/kavita/cloudflare-tunnel.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared-kavita
  namespace: kavita
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudflared-kavita
  template:
    metadata:
      labels:
        app: cloudflared-kavita
    spec:
      containers:
      - name: cloudflared
        image: cloudflare/cloudflared:latest
        args:
        - tunnel
        - --config
        - /etc/cloudflared/config/config.yaml
        - run
        livenessProbe:
          httpGet:
            path: /ready
            port: 2000
          failureThreshold: 1
          initialDelaySeconds: 10
          periodSeconds: 10
        volumeMounts:
        - name: config
          mountPath: /etc/cloudflared/config
          readOnly: true
        - name: creds
          mountPath: /etc/cloudflared/creds
          readOnly: true
      volumes:
      - name: creds
        secret:
          secretName: kavita-tunnel-credentials
      - name: config
        configMap:
          name: cloudflared-kavita
